--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Day-01</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -60,7 +60,9 @@
     <audio data-key="76" src="sounds/tink.wav"></audio>
 
     <script>
-
+        window.addEventListener("keydown", function (e) {
+            const audio = document.querySelector("audio")
+        });
     </script>
 </body>
 
