--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
             key.classList.add("playing");
         });
 
+        function removeTransition(e) {
+            if (e.propertyName !== "transform") return;
+            console.log(e);
+        }
+
         const keys = document.querySelectorAll(".key");
         keys.forEach(key => key.addEventListener("transitionend", removeTransition));
     </script>
